--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -452,13 +452,17 @@ jobs:
             cat ~/OldWorkflowID.txt
             OldWorkflowID=$(cat ~/OldWorkflowID.txt)
             echo  OldWorkflowID: "${OldWorkflowID}"
+            OldWorkflowID=!Split [ "-", "${OldWorkflowID}" ]
+            OldWorkflowID= $(!Select [ 1, OldWorkflowID ])
+            echo OldWorkflowID: "{$OldWorkflowID}"
+
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
             
            
             if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
             then
               echo "-----------------Delete Confirmed----------------"
-              aws s3 rm "s3://${OldWorkflowID}" --recursive
+              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
               aws cloudformation delete-stack --stack-name udapeople-backend-${OldWorkflowID}
               aws cloudformation delete-stack --stack-name udapeople-frontend-${OldWorkflowID}
             else
