--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -420,6 +420,8 @@ jobs:
           name: Update the cloudfront distribution
           command: |
             export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
+            OldWorkflowID= aws cloudformation !Split [ "-", $OldWorkflowID ]
+            OldWorkflowID= aws cloudformation $(!Select [ 1, OldWorkflowID ])
             echo $OldWorkflowID >> ~/OldWorkflowID.txt
             cat ~/OldWorkflowID.txt
             export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
@@ -452,8 +454,7 @@ jobs:
             cat ~/OldWorkflowID.txt
             OldWorkflowID=$(cat ~/OldWorkflowID.txt)
             echo  OldWorkflowID: "${OldWorkflowID}"
-            OldWorkflowID= aws !Split [ "-", "${OldWorkflowID}" ]
-            OldWorkflowID= aws $(!Select [ 1, OldWorkflowID ])
+            
             echo OldWorkflowID: "{$OldWorkflowID}"
 
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
