--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -420,8 +420,9 @@ jobs:
           name: Update the cloudfront distribution
           command: |
             export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
-            OldWorkflowID= aws cloudformation !Split [ "-", $OldWorkflowID ]
-            OldWorkflowID= aws cloudformation $(!Select [ 1, OldWorkflowID ])
+           
+            OldWorkflowID= (!Select [ 1,  !Split [ "-", $OldWorkflowID ] ])
+            echo OldWorkflowID
             echo $OldWorkflowID >> ~/OldWorkflowID.txt
             cat ~/OldWorkflowID.txt
             export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
