--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -421,7 +421,7 @@ jobs:
           command: |
             export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
            
-            OldWorkflowID= (!Select [ 1,  !Split [ "-", $OldWorkflowID ] ])
+            OldWorkflowID= !Select [ 1,  !Split [ "-", $OldWorkflowID ] ]
             echo OldWorkflowID
             echo $OldWorkflowID >> ~/OldWorkflowID.txt
             cat ~/OldWorkflowID.txt
