--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -420,8 +420,8 @@ jobs:
           name: Update the cloudfront distribution
           command: |
             export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
-           
-            OldWorkflowID= !Select [ 1,  !Split [ "-", $OldWorkflowID ] ]
+            #OldWorkflowID= !Select [ 1,  !Split [ "-", $OldWorkflowID ] ]
+            echo OldWorkflowID=  $OldWorkflowID | cut -d "-" -f 2
             echo OldWorkflowID
             echo $OldWorkflowID >> ~/OldWorkflowID.txt
             cat ~/OldWorkflowID.txt
