--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -421,9 +421,8 @@ jobs:
           command: |
             export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
             #OldWorkflowID= !Select [ 1,  !Split [ "-", $OldWorkflowID ] ]
-            echo OldWorkflowID=  $(OldWorkflowID | cut -d "-" -f 2)
-            echo $OldWorkflowID
-            echo $OldWorkflowID >> ~/OldWorkflowID.txt
+            echo myOldWorkflowID=  $OldWorkflowID | cut -d "-" -f 2
+            echo ${myOldWorkflowID} >> ~/OldWorkflowID.txt
             cat ~/OldWorkflowID.txt
             export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
             echo stacks "${STACKS}"
@@ -456,7 +455,7 @@ jobs:
             OldWorkflowID=$(cat ~/OldWorkflowID.txt)
             echo  OldWorkflowID: "${OldWorkflowID}"
             
-            echo OldWorkflowID: "{$OldWorkflowID}"
+            
 
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
             
