--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -422,7 +422,8 @@ jobs:
             export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
             #OldWorkflowID= !Select [ 1,  !Split [ "-", $OldWorkflowID ] ]
             echo myOldWorkflowID=  $OldWorkflowID | cut -d "-" -f 2
-            echo myOldWorkflowID >> ~/OldWorkflowID.txt
+            echo myOldWorkflowID: "${myOldWorkflowID}"
+            echo ${myOldWorkflowID} >> ~/OldWorkflowID.txt
             cat ~/OldWorkflowID.txt
             export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
             echo stacks "${STACKS}"
