--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -404,72 +404,72 @@ jobs:
             fi            
       - destroy-environment
       - revert-migrations
-  cloudfront-update:
-    docker:
-      - image: python:3.7-alpine3.11
-    steps:
-      - checkout
-      - attach_workspace:
-          at: ~/ 
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --update curl
-            pip install awscli
-      - run:
-          name: Update the cloudfront distribution
-          command: |
-            export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
-            #OldWorkflowID= !Select [ 1,  !Split [ "-", $OldWorkflowID ] ]
-            myOldWorkflowID=  $OldWorkflowID | cut -d "-" -f 2
-            echo ${myOldWorkflowID}
-            echo ${myOldWorkflowID} >> ~/OldWorkflowID.txt
-            cat ~/OldWorkflowID.txt
-            export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
-            echo stacks "${STACKS}"
-            aws cloudformation deploy \
-              --template-file .circleci/files/cloudfront.yml \
-              --stack-name InitialStack \
-              --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
-              --tags project=udapeople
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - OldWorkflowID.txt        
-      - destroy-environment
-      - revert-migrations
-  cleanup:
-    docker:
-      - image: python:3.10.5-alpine3.16
-    steps:
-      - checkout
-      - attach_workspace:
-          at: ~/
-      - run :
-          name: Install dependencies
-          command: |
-            apk add --update --no-cache tar gzip nodejs npm aws-cli curl ansible
-      - run:
-          name: fetching old stack workflow id and cleanup
-          command: |
-            cat ~/OldWorkflowID.txt
-            OldWorkflowID=$(cat ~/OldWorkflowID.txt)
-            echo  OldWorkflowID: "${OldWorkflowID}"
+  # cloudfront-update:
+  #   docker:
+  #     - image: python:3.7-alpine3.11
+  #   steps:
+  #     - checkout
+  #     - attach_workspace:
+  #         at: ~/ 
+  #     - run:
+  #         name: Install dependencies
+  #         command: |
+  #           apk add --update curl
+  #           pip install awscli
+  #     - run:
+  #         name: Update the cloudfront distribution
+  #         command: |
+  #           export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
+  #           #OldWorkflowID= !Select [ 1,  !Split [ "-", $OldWorkflowID ] ]
+  #           myOldWorkflowID=  $OldWorkflowID | cut -d "-" -f 2
+  #           echo ${myOldWorkflowID}
+  #           echo ${myOldWorkflowID} >> ~/OldWorkflowID.txt
+  #           cat ~/OldWorkflowID.txt
+  #           export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
+  #           echo stacks "${STACKS}"
+  #           aws cloudformation deploy \
+  #             --template-file .circleci/files/cloudfront.yml \
+  #             --stack-name InitialStack \
+  #             --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
+  #             --tags project=udapeople
+  #     - persist_to_workspace:
+  #         root: ~/
+  #         paths:
+  #           - OldWorkflowID.txt        
+  #     - destroy-environment
+  #     - revert-migrations
+  # cleanup:
+  #   docker:
+  #     - image: python:3.10.5-alpine3.16
+  #   steps:
+  #     - checkout
+  #     - attach_workspace:
+  #         at: ~/
+  #     - run :
+  #         name: Install dependencies
+  #         command: |
+  #           apk add --update --no-cache tar gzip nodejs npm aws-cli curl ansible
+  #     - run:
+  #         name: fetching old stack workflow id and cleanup
+  #         command: |
+  #           cat ~/OldWorkflowID.txt
+  #           OldWorkflowID=$(cat ~/OldWorkflowID.txt)
+  #           echo  OldWorkflowID: "${OldWorkflowID}"
             
             
 
-            echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
+  #           echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
             
            
-            if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
-            then
-              echo "-----------------Delete Confirmed----------------"
-              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-              aws cloudformation delete-stack --stack-name udapeople-backend-${OldWorkflowID}
-              aws cloudformation delete-stack --stack-name udapeople-frontend-${OldWorkflowID}
-            else
-              echo "----------------Cannot Cleanup-----------------"
-            fi              
+  #           if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
+  #           then
+  #             echo "-----------------Delete Confirmed----------------"
+  #             aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+  #             aws cloudformation delete-stack --stack-name udapeople-backend-${OldWorkflowID}
+  #             aws cloudformation delete-stack --stack-name udapeople-frontend-${OldWorkflowID}
+  #           else
+  #             echo "----------------Cannot Cleanup-----------------"
+  #           fi              
           
                 
 workflows:
@@ -500,7 +500,7 @@ workflows:
           requires: [run-migrations]            
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]    
-      - cloudfront-update:
-          requires: [smoke-test]
-      - cleanup:
-          requires: [cloudfront-update]        
+      # - cloudfront-update:
+      #     requires: [smoke-test]
+      # - cleanup:
+      #     requires: [cloudfront-update]        
