--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -422,8 +422,8 @@ jobs:
             # export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
             # #OldWorkflowID= !Select [ 1,  !Split [ "-", $OldWorkflowID ] ]
             # myOldWorkflowID=  $OldWorkflowID | cut -d "-" -f 2
-            # echo ${myOldWorkflowID}
-            # echo ${myOldWorkflowID} >> ~/OldWorkflowID.txt
+            # echo $myOldWorkflowID
+            # echo $myOldWorkflowID >> ~/OldWorkflowID.txt
             # cat ~/OldWorkflowID.txt
             # export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
             # echo stacks "${STACKS}"
@@ -455,7 +455,7 @@ jobs:
             export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
             echo OldWorkflowID: "${OldWorkflowID}"
             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
-            export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
+            export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text) 
             echo Stack names: "${STACKS[@]}"
             # if [[ "${OldWorkflowID}" != "${OldWorkflowID}" ]]
             # if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
