--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -416,55 +416,55 @@ jobs:
           command: |
             apk add --update curl
             pip install awscli
-      - run:
-          name: Update the cloudfront distribution
-          command: |
-             export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
-             #OldWorkflowID= !Select [ 1,  !Split [ "-", $OldWorkflowID ] ]
-             myOldWorkflowID=  $OldWorkflowID | cut -d "-" -f 2
-             echo This is "${myOldWorkflowID}"
-             #echo $myOldWorkflowID >> ~/OldWorkflowID.txt
-             cat ~/OldWorkflowID.txt
-             export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
-             echo stacks "${STACKS}"
-             aws cloudformation deploy \
-               --template-file .circleci/files/cloudfront.yml \
-               --stack-name InitialStack \
-               --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
-               --tags project=udapeople
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - OldWorkflowID.txt        
-      - destroy-environment
-      - revert-migrations
-  cleanup:
-    docker:
-      - image: python:3.10.5-alpine3.16
-    steps:
-      - checkout
-      - attach_workspace:
-          at: ~/
-      - run :
-          name: Install dependencies
-          command: |
-            apk add --update --no-cache tar gzip nodejs npm aws-cli curl ansible
-      - run:
-          name: fetching old stack workflow id and cleanup
-          command: |
-             cat ~/OldWorkflowID.txt
-             OldWorkflowID=$(cat ~/OldWorkflowID.txt)
-             echo  OldWorkflowID: "${OldWorkflowID}"
-             echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
-             if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
-             then
-               echo "-----------------Delete Confirmed----------------"
-               aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-               aws cloudformation delete-stack --stack-name udapeople-backend-${OldWorkflowID}
-               aws cloudformation delete-stack --stack-name udapeople-frontend-${OldWorkflowID}
-             else
-               echo "----------------Cannot Cleanup-----------------"
-             fi
+  #     - run:
+  #         name: Update the cloudfront distribution
+  #         command: |
+  #            export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
+  #            #OldWorkflowID= !Select [ 1,  !Split [ "-", $OldWorkflowID ] ]
+  #            myOldWorkflowID=  $OldWorkflowID | cut -d "-" -f 2
+  #            echo This is "${myOldWorkflowID}"
+  #            #echo $myOldWorkflowID >> ~/OldWorkflowID.txt
+  #            cat ~/OldWorkflowID.txt
+  #            export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
+  #            echo stacks "${STACKS}"
+  #            aws cloudformation deploy \
+  #              --template-file .circleci/files/cloudfront.yml \
+  #              --stack-name InitialStack \
+  #              --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
+  #              --tags project=udapeople
+  #     - persist_to_workspace:
+  #         root: ~/
+  #         paths:
+  #           - OldWorkflowID.txt        
+  #     - destroy-environment
+  #     - revert-migrations
+  # cleanup:
+  #   docker:
+  #     - image: python:3.10.5-alpine3.16
+  #   steps:
+  #     - checkout
+  #     - attach_workspace:
+  #         at: ~/
+  #     - run :
+  #         name: Install dependencies
+  #         command: |
+  #           apk add --update --no-cache tar gzip nodejs npm aws-cli curl ansible
+  #     - run:
+  #         name: fetching old stack workflow id and cleanup
+  #         command: |
+  #            cat ~/OldWorkflowID.txt
+  #            OldWorkflowID=$(cat ~/OldWorkflowID.txt)
+  #            echo  OldWorkflowID: "${OldWorkflowID}"
+  #            echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
+  #            if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
+  #            then
+  #              echo "-----------------Delete Confirmed----------------"
+  #              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+  #              aws cloudformation delete-stack --stack-name udapeople-backend-${OldWorkflowID}
+  #              aws cloudformation delete-stack --stack-name udapeople-frontend-${OldWorkflowID}
+  #            else
+  #              echo "----------------Cannot Cleanup-----------------"
+  #            fi
            
                     
                 
@@ -492,11 +492,11 @@ workflows:
           requires: [configure-infrastructure] 
       - deploy-frontend:
           requires: [run-migrations]
-      - deploy-backend:
+      - deploy-backsend:
           requires: [run-migrations]            
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]    
-      - cloudfront-update:
-          requires: [smoke-test]
-      - cleanup:
-          requires: [cloudfront-update]        
+      # - cloudfront-update:
+      #     requires: [smoke-test]
+      # - cleanup:
+      #     requires: [cloudfront-update]        
