--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -492,7 +492,7 @@ workflows:
           requires: [configure-infrastructure] 
       - deploy-frontend:
           requires: [run-migrations]
-      - deploy-backsend:
+      - deploy-backend:
           requires: [run-migrations]            
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]    
