--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -420,8 +420,9 @@ jobs:
             export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
             #OldWorkflowID= !Select [ 1,  !Split [ "-", $OldWorkflowID ] ]
             #myOldWorkflowID=  $OldWorkflowID | cut -d "-" -f 2
-            #echo OldWorkflowID: "${myOldWorkflowID}"
-            echo $myOldWorkflowID >> ~/OldWorkflowID.txt
+            echo OldWorkflowID: "${myOldWorkflowID}"
+            
+            echo "${myOldWorkflowID}" >> ~/OldWorkflowID.txt
             cat ~/OldWorkflowID.txt
             export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
             echo stacks "${STACKS}"
@@ -452,7 +453,7 @@ jobs:
           command: |
               cat ~/OldWorkflowID.txt
               OldWorkflowID=$(cat ~/OldWorkflowID.txt)
-              echo  OldWorkflowID: $OldWorkflowID
+              echo  OldWorkflowID: "${OldWorkflowID}"
               echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
               if [[ "${CIRCLE_WORKFLOW_ID:0:7}" =~ "${OldWorkflowID}" ]]
               then
