--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -415,7 +415,7 @@ jobs:
             apk add --update --no-cache nodejs npm aws-cli curl
             pip install awscli
       - run:
-          name: Update the cloudfront distribution
+          name: Updating the cloudfront distribution
           command: |
             export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
              #OldWorkflowID= !Select [ 1,  !Split [ "-", $OldWorkflowID ] ]
